# math_engine

./: Cargo.toml  README.md  test_file.ichi
src/: braces.rs  lib.rs  math.rs  matrix.rs  parser.rs  polynom.rs  root.rs  undefined.rs  variable.rs  vector.rs
src/castable/: math.rs  mod.rs
src/castable/algebra/: absolute.rs  braces.rs  fraction.rs  infinity.rs  mod.rs  polynom.rs  root.rs  undefined.rs  variable.rs
src/castable/calculus/: factorial.rs  mod.rs  product.rs  sum.rs
src/castable/linear_algebra/: matrix.rs  vector.rs
src/definitions/: math_functions.rs  mod.rs  syscall_functions.rs
src/file/: mod.rs
src/lexer/: mod.rs
src/logging/: mod.rs
src/math/: mod.rs  simplifiable.rs
src/math/algebra/: absolute.rs  braces.rs  equation.rs  fraction.rs  function.rs  infinity.rs  mod.rs  polynom.rs  root.rs  undefined.rs  variable.rs
src/math/calculus/: factorial.rs  mod.rs  product.rs  sum.rs
src/math/descrete/: mod.rs  variable.rs
src/math/geometry/: angle.rs  line.rs  mod.rs  point.rs  triangle.rs
src/math/linear_algebra/: matrix.rs  mod.rs  vector.rs
src/math/operator/: algebra.rs  equation.rs  mod.rs
src/math/trigonometry/: function_definitions.rs
src/parser/: generics.rs  math.rs  mod.rs  operator.rs  primitive.rs
src/parser/algebra/: absolute.rs  braces.rs  fraction.rs  function.rs  infinity.rs  mod.rs  operator.rs  polynom.rs  (+3 more)
src/scope/: mod.rs
src/solver/: step.rs
tests/: algebra.rs  calculus.rs  gen_test.py  math_all_combinations.rs  parser.rs  polynom.rs  simplify.rs  tests.txt  variable.rs
tests/parser/: variable.rs
(+39 files in other folders)
