[package]
name = "math_engine"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# default = ["step-tracking"]
# step-tracking = []

[dependencies]
fancy-regex = "0.11.0"
itertools = "0.11.0"
lazy_static = "1.4.0"
regex = "1.9.5"
rust_decimal = "1.32.0"
rust_decimal_macros = "1.32.0"
