[package]
name = "math_engine"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["double-check"]
double-check = []

[dependencies]
colored = "2.0.4"
itertools = "0.11.0"
log = "0.4.20"
once_cell = "1.19.0"
rust_decimal = "1.32.0"
rust_decimal_macros = "1.32.0"
